@@ -69,13 +69,15 @@ public class IRODSFileInputStream extends InputStream {
 			throw new FileNotFoundException(msg);
 		}
 
-		if (!irodsFile.canRead()) {
-			final String msg = "cannot read the file:"
-					+ irodsFile.getAbsolutePath();
-			log.error(msg);
-			throw new FileNotFoundException(msg);
-		}
-
+		/*
+		 * 
+		 * TODO: replace(?) when bug is resolved: [#621] error reading file
+		 * w/group permissions
+		 * 
+		 * if (!irodsFile.canRead()) { final String msg =
+		 * "cannot read the file:" + irodsFile.getAbsolutePath();
+		 * log.error(msg); throw new FileNotFoundException(msg); }
+		 */
 		/*
 		 * File is not opened until first read. This avoids situations, such as
 		 * in Fedora repository, where the stream would otherwise be opened by
